...
    <string name="text_status_sending">Dados estão sendo enviados</string>
    <string name="text_status_sent">Não existe dados para serens enviados</string>
    <string name="text_title_password">SENHA</string>
    <string name="text_password_invalid">SENHA INVÁLIDA!</string>
    <string name="text_title_config">CONFIGURAÇÃO</string>
    <string name="text_number">NRO APARELHO</string>
    <string name="text_pattern_save">SALVAR</string>
    <string name="text_msg_recovery">Recuperando dados da tabela \"%1$s\" do Web Service.</string>
    <string name="text_msg_clean">Limpando a tabela \"%1$s\".</string>
    <string name="text_msg_save">Salvando dados na tabela \"%1$s\".</string>
    <string name="text_msg_get_token">Enviando dados de Token</string>
    <string name="text_msg_save_token">Salvando dados de Token</string>
    <string name="text_msg_finish_update_initial">Ajuste iniciais finalizado com sucesso!</string>
...
